# workprint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_workprint.py
workprint/: __init__.py  cli.py  config.py  models.py
workprint/collectors/: __init__.py  git.py  notes.py  shell.py
workprint/generators/: __init__.py  skill.py
workprint/miners/: __init__.py  pattern.py  workflow.py
